# foxmayn_cowork_cli

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Justfile  MVP_COMPLETION_PLAN.md  MVP_REPORT.md  MVP_REPORT_V2.md  PROJECT_REVIEW.md  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: app.rs  config.rs  error.rs  fs.rs  main.rs  setup.rs  storage.rs
src/app/: agentic.rs  entry.rs  events.rs  mod.rs  state.rs  system_prompt.rs
src/llm/: local.rs  mod.rs  ollama.rs  openrouter.rs  runtime.rs  tools.rs  types.rs
src/llm/tools/: descriptions.rs  dispatch.rs  mod.rs  schema.rs  validate.rs
src/tui/: commands.rs  mod.rs  ui.rs
src/tui/widgets/: chat.rs  confirmation.rs  file_tree.rs  mod.rs
