[package]
name = "foxmayn_cowork_cli"
version = "0.1.0"
edition = "2024"
description = "Terminal UI for AI-assisted file management"
repository = "https://github.com/nasroykh/foxmayn_cowork_cli"

[[bin]]
name = "foxmayn-cowork"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tui-textarea = "0.7"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
regex = "1"
pdf-extract = "0.7"
