[package]
name = "foxmayn_cowork_cli"
version = "0.1.0"
edition = "2024"
description = "Terminal UI for AI-assisted file management"
repository = "https://github.com/nasroykh/foxmayn_cowork_cli"

[[bin]]
name = "foxmayn-cowork"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
tui-markdown = "=0.3.6"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tui-textarea = "0.7"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
regex = "1"
pdf-extract = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
rpassword = "7"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Optional: local LLM inference via llama.cpp
llama-cpp-2 = { version = "0.1", optional = true, features = ["sampler"] }
hf-hub    = { version = "0.3", default-features = false, features = ["tokio", "online"], optional = true }

[features]
# CPU-only local inference (cross-compiles cleanly)
local       = ["dep:llama-cpp-2", "dep:hf-hub"]
# GPU acceleration variants (add on top of `local`)
local-metal = ["local", "llama-cpp-2/metal"]
local-cuda  = ["local", "llama-cpp-2/cuda"]
